# TechTheLunatic-LowLevel

./: .gitignore  PinesUsees  PinesUsees.ods  constantes.txt  doc_generator.py  documentation bas niveau.txt  documentation.txt
Projets exemple à ne pas ouvrir sous peine de merge subit/: complete_low_level.coproj
arduino/projects/Parasol/: Parasol.ino
arduino/projects/Parasol_for_testing/: Parasol_for_testing.ino
auto-asserv/: VitesseMax.py  algoGenetiqueLissage.py  arrervAuto.py  asservissement_gradient_descente.py  capture_vitesse.py  donnees_vitesse.txt  interface-serie.py
datasheet/STM32F4/: Pinout_STM32_F4DISCOVERY.xls
hardware/AX12/: ax12.cpp  ax12.h
hardware/INTech - Carte de Base/: INTech - Carte de Base.brd  INTech - Carte de Base.sch
hardware/Robot principal/: robot.GBL  robot.GTL  robot.GTO  robot.TXT  robot.brd  robot.dri  robot.gpi  robot.sch
hardware/les yeux/: oeuil.GBL  oeuil.GTL  oeuil.GTO  oeuil.TXT  oeuil.brd  oeuil.dri  oeuil.gpi  oeuil.sch
hardware/lib/: AX-12_CF_INTech.lbr  Arduino_Pro_Mini@S&G.lbr  BOB-08745_CF_INTech.lbr  DELS-10-Rack_CF_INTech.lbr  INTech.lbr  LM18200T_CF_INTech.lbr  STM32F4-DISCOVERY.lbr  STM32F4-DISCOVERY_CF_INTECH.lbr  STM32F407VGT6_CF_INTECH.lbr  USB_CF_INTech.lbr  dc-dc-converter_CF_INTech.lbr  pinhead_CF_INTech.lbr
hardware/robot_secondaire/: robot_secondaire.ino
hardware/tutos/: Eagle-manuel.docx
interface/: asserv2.py  interface-serie.py  serialConnexion.py  threadEcoute.py
projects/complete_low_level/: CMakeLists.txt  complete_low_level.coproj  main.cpp
projects/complete_low_level/cmsis_boot/: stm32f4xx.h
projects/complete_low_level/cmsis_lib/include/: misc.h  stm32f4xx_adc.h  stm32f4xx_exti.h  stm32f4xx_gpio.h  stm32f4xx_rcc.h  stm32f4xx_rtc.h  stm32f4xx_syscfg.h  stm32f4xx_tim.h  stm32f4xx_usart.h
projects/complete_low_level/cmsis_lib/source/: misc.c  stm32f4xx_adc.c  stm32f4xx_exti.c
projects/complete_low_level/include/: ActuatorsMgr.hpp  BinaryMotorMgr.hpp  Counter.h  Elevator.h  ElevatorMgr.h  MotionControlSystem.h  Motor.h  SensorMgr.h
projects/complete_low_level/lib/: safe_enum.hpp  utils.c
projects/complete_low_level/lowlevel/: lowlevel.cbp
projects/complete_low_level/src/: BinaryMotorMgr.cpp  Counter.cpp  Elevator.cpp  Elevator.h  ElevatorMgr.cpp  ElevatorMgr.h  MotionControlSystem.cpp  Motor.cpp  SensorMgr.cpp  main.cpp
projects/low_level_flash/: README.txt  flash.sh  installation_clion.sh  installation_debian.sh  scr  scr.sh  st-util.sh
stlink/: READMEBITCH.txt  st-flash  st-info  st-term  st-util
yeuxAline/: yeuxAline.ino  yeuxAline.sln  yeuxAline.vcxproj  yeuxAline.vcxproj.filters
yeuxAline/Debug/: board.buildinfo  yeuxAline.ino.elf  yeuxAline.ino.hex
yeuxAline/__vm/: .yeuxAline.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml
